Fix to pass Lighthouse alt tag and color contrast

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,18 +1,17 @@
 @import 'base';
 
 .footer {
-    padding-bottom: 53px;
-    background-color: $color-green;
-    box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
+    background-color: $color-grey-1;
 }
 
 .footer__apps {
     padding: 10px;
-    background-color: $color-white;
+    background-color: $color-white-primary;
+    box-shadow: 1px 1px 2px 0 $color-grey-2;
 }
 
 .footer__apps-text {
-    color: rgba($color-black, 0.54);
+    color: $color-black-secondary;
 }
 
 .footer__apps-img {
@@ -22,10 +21,10 @@
 
 .footer__lower {
     padding: 10px;
-    color: $color-white;
+    color: $color-black-secondary;
 
     a {
-        color: $color-white;
+        color: $color-black-secondary;
         text-decoration: underline;
         font-weight: 600;
     }
@@ -41,7 +40,7 @@
     border-radius: 0;
     background: url('./assets/footer-chevron@2x.png') transparent center right no-repeat;
     background-size: 9px 6px;
-    color: $color-white;
+    color: $color-black-secondary;
     text-decoration: underline;
     font-weight: 600;
     font-size: 14px;
