--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -8,7 +8,7 @@
 
 html {
     box-sizing: border-box;
-    font-size: 12px;
+    font-size: 14px;
     font-family: "Open Sans", sans-serif;
 }
 
@@ -17,7 +17,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: $color-white-darker;
+    background-color: $color-grey-1;
 }
 
 *,
@@ -27,26 +27,22 @@ body {
 }
 
 ::-webkit-input-placeholder {
-    color: $color-black;
-    opacity: 0.38;
+    color: $color-black-secondary;
 }
 
 ::-moz-placeholder {
-    color: $color-black;
-    opacity: 0.38;
+    color: $color-black-secondary;
 }
 
 :-ms-input-placeholder {
-    color: $color-black;
-    opacity: 0.38;
+    color: $color-black-secondary;
 }
 
 :-moz-placeholder {
-    color: $color-black;
-    opacity: 0.38;
+    color: $color-black-secondary;
 }
 
 a {
-    color: $color-black;
+    color: $color-black-primary;
     text-decoration: none;
 }
